# Cortex-AI

./: Dockerfile  README.md  __init__.py  app.py  baseline_agent.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  run.py  test_api.py
.github/workflows/: deploy_hf.yml
openenv_customer_support_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
openenv_practice_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  customer_support_environment.py  practice_env_environment.py  requirements.txt
