# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customer_support_env"
version = "1.0.0"
description = "CustomerSupportEnv — Real-world AI customer support RL environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "gradio>=4.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "practice_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["practice_env", "practice_env.server"]
package-dir = { "practice_env" = ".", "practice_env.server" = "server" }